Teach form_parser.cc other_possible_usernames

When Chrome tries to figure out which text field of a password form
is the username, it picks one and stores the rest in
PasswordForm::other_possible_usernames.

This field has so far only been populated by the old form parser
(password_form_conversion_utils.cc). This CL also teaches the new
parser to populate that field.

However, there is a slight change: the new parser will include also
the username which Chrome picked, for simplicity of the processing of
the information later. The change in meaning is not breaking, because
the output of the old and the new parser is consumed by different
versions of PasswordFormManager. https://crbug.com/881346 tracks
renaming of the other_possible_usernames field once there is only one
meaning to it.

Bug: 880721
Change-Id: I114472dc8d1b37a8f77bdb79689008e7795d81a4
Reviewed-on: https://chromium-review.googlesource.com/1210503
Commit-Queue: Vaclav Brozek <vabr@chromium.org>
Reviewed-by: Vadym Doroshenko <dvadym@chromium.org>
Cr-Commit-Position: refs/heads/master@{#589301}
Former-commit-id: 9c4e31f43f11d7a34577b5f07265d7644f848ac0